algunos cambios y apunto de terminar

--- a/index.html
+++ b/index.html
@@ -8,157 +8,195 @@
 </head>
 <body>
     <header>
-        <h1>Catalogo de AS</h1>
-        <p>Encuentra los mejores productos para la limpieza de tu hogar</p>
+        <h1 class="titulo">Catalogo</h1>
+        <p class="subtitutlo">Convierta su rutina de limpieza diaria en una experiencia productiva: herramientas confiables hacen que su hogar sea completamente nuevo. ¡Porque limpiar puede ser un arte!</p>
     </header>
 
     <section class="catalogo">
         <div class="producto">
-            <img src="imagenes/bolsa_AS-extragrande.jpeg" alt="Escoba clásica">
-            <h2>Bolsa Extragrande</h2>
+            <img src="imagenes/escoba_f_estrellas.jpeg" alt="Escoba clásica">
+            <h2>Escoba 5 Estrellas</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/Bolsa_AS-grande.jpeg" alt="Escoba Premium">
-            <h2>Bolsa Grande</h2>
+            <img src="imagenes/escoba_zula.jpeg" alt="Escoba Premium">
+            <h2>Escoba Zula</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/Bolsa_AS-mediana.jpeg" alt="Trapero estándar">
-            <h2>Bolsa Mediana</h2>
+            <img src="imagenes/escoba_as.jpeg" alt="Trapero estándar">
+            <h2>Escoba As</h2>
         </div>
 
        
         <div class="producto">
-            <img src="imagenes/escoba_5_estrellas.jpeg" alt="Escoba clásica">
-            <h2>Escoba 5 estrellas</h2>
+            <img src="imagenes/escoba_latina.jpeg" alt="Escoba clásica">
+            <h2>Escoba Latina</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/Escoba_AS.jpeg" alt="Escoba Premium">
-            <h2>Escoba AS</h2>
+            <img src="imagenes/escoba_reyna.jpeg" alt="Escoba Premium">
+            <h2>Escoba Reyna</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/escoba_dos-colores.jpeg" alt="Trapero estándar">
-            <h2>Escoba dos colores</h2>
+            <img src="imagenes/escoba_aguamarina.jpeg" alt="Trapero estándar">
+            <h2>Escoba Aguamarina</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/escoba_lizas.jpeg" alt="Trapero Premium">
-            <h2>escobas lisas</h2>
+            <img src="imagenes/escoba_liza.jpeg" alt="Trapero Premium">
+            <h2>Escobas Lizas</h2>
         </div>
         <div class="producto">
-            <img src="imagenes/escoba_techo.jpeg" alt="Escoba clásica">
-            <h2>Escoba de techo</h2>
-        </div>
-
-        <div class="producto">
-            <img src="imagenes/escobas_normales.jpeg" alt="Escoba Premium">
-            <h2>Escoba</h2>
+            <img src="imagenes/escoba_megadaly.jpeg" alt="Escoba clásica">
+            <h2>Escoba Megadaly</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/otras_escobas.jpeg" alt="Trapero estándar">
-            <h2>otras escobas</h2>
+            <img src="imagenes/escoba_daly.jpeg" alt="Escoba Premium">
+            <h2>Escoba Daly</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/porta_escoba.jpeg" alt="Trapero Premium">
-            <h2>portaescoba</h2>
-        </div>
-        <div class="producto">
-            <img src="imagenes/escobas.jpeg" alt="Escoba clásica">
-            <h2>Escoba Clásica</h2>
+            <img src="imagenes/escoba_colombia.jpeg" alt="Trapero estándar">
+            <h2>Escoba Colombia</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/escobilla_baño.jpeg" alt="Escoba Premium">
-            <h2>escobilla de baño</h2>
+            <img src="imagenes/escoba_milenio.jpeg" alt="Trapero Premium">
+            <h2>Escoba Milenio</h2>
+        </div>
+        <div class="producto">
+            <img src="imagenes/cepillo_psio_plast.jpeg" alt="Escoba clásica">
+            <h2>Cepillo de plastico para piso</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/cepillos_manuales.jpeg" alt="Trapero estándar">
-            <h2>cepillos manuales</h2>
+            <img src="imagenes/cepillo_plancha.jpeg" alt="Escoba Premium">
+            <h2>Cepillo Plancha</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/cepillo_piso.jpeg" alt="Trapero Premium">
-            <h2>cepillos de piso</h2>
-        </div>
-        <div class="producto">
-            <img src="imagenes/cepillos.jpeg" alt="Escoba clásica">
-            <h2>cepillos</h2>
+            <img src="imagenes/rastrillo_pequeño.jpeg" alt="Trapero estándar">
+            <h2>Rastrillo Pequeño</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/embolar_grande.jpeg" alt="Escoba Premium">
-            <h2>cepillo de embolar</h2>
+            <img src="imagenes/recogedor_banda.jpeg" alt="Trapero Premium">
+            <h2>Recogedor con banda</h2>
+        </div>
+        <div class="producto">
+            <img src="imagenes/recogedor_sinbanda.jpeg" alt="Escoba clásica">
+            <h2>Recogedor sin banda</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/trapero_1.5-grande.jpeg" alt="Trapero estándar">
-            <h2>Trapero 1.5 grande</h2>
+            <img src="imagenes/cepillo_anatomico.jpeg" alt="Escoba Premium">
+            <h2>Cepillo Anatomico</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/trapero_blanco.jpeg" alt="Trapero Premium">
-            <h2>Trapero blanco</h2>
-        </div>
-        <div class="producto">
-            <img src="imagenes/trapero_grande.jpeg" alt="Escoba clásica">
-            <h2>trapero blanco</h2>
+            <img src="imagenes/chupa_2.jpeg" alt="Trapero estándar">
+            <h2>Chupa</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/trapero_hilo-1000.jpeg" alt="Escoba Premium">
-            <h2>Trapero de hilo 1000</h2>
+            <img src="imagenes/churrusco_sinb.jpeg" alt="Trapero Premium">
+            <h2>Churrusco sin base</h2>
+        </div>
+        <div class="producto">
+            <img src="imagenes/churrusco_conb.jpeg" alt="Escoba clásica">
+            <h2>Churrusco con base</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/trapero_hilo_500.jpeg" alt="Trapero estándar">
-            <h2>trapero de hilo 500</h2>
+            <img src="imagenes/cepillo_embalar.jpeg" alt="Escoba Premium">
+            <h2>Cepillo de embalar grande y pequeño</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/trapero_hilo_grande.jpeg" alt="Trapero Premium">
+            <img src="imagenes/rastrillo_grande.jpeg" alt="Trapero estándar">
+            <h2>Rastrillo Grande</h2>
+        </div>
+
+        <div class="producto">
+            <img src="imagenes/trapero_hilogrande.jpeg" alt="Trapero Premium">
             <h2>Trapero de hilo grande</h2>
         </div>
         <div class="producto">
-            <img src="imagenes/trapero_moradito.jpeg" alt="Escoba clásica">
-            <h2>Trapero morado</h2>
+            <img src="imagenes/trapero_1000.jpeg" alt="Escoba clásica">
+            <h2>Trapero 1000</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/trapero_normal.jpeg" alt="Escoba Premium">
-            <h2>trapero normal</h2>
+            <img src="imagenes/trapero_hilo500.jpeg" alt="Escoba Premium">
+            <h2>trapero hilo 500</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/mas__traperos.jpeg" alt="Trapero estándar">
-            <h2>otros dos traperos</h2>
+            <img src="imagenes/trapero_cebra1000.jpeg" alt="Trapero estándar">
+            <h2>Trapero Cebra 1000</h2>
         </div>
 
         <div class="producto">
-            <img src="imagenes/rastrillo.jpeg" alt="Trapero Premium">
-            <h2>rastrillo</h2>
+            <img src="imagenes/trapero_cebra.jpeg" alt="Trapero Premium">
+            <h2>Trapero Cebra</h2>
         </div>
         <div class="producto">
-            <img src="imagenes/recojedor.jpeg" alt="Escoba clásica">
-            <h2>recojedor</h2>
+            <img src="imagenes/trapero_pitorro.jpeg" alt="Escoba clásica">
+            <h2>Trapero con acople</h2>
+        </div>
+
+      <div class="producto"> 
+            <img src="imagenes/trapero_28.jpeg" alt="Escoba Premium">
+            <h2>Trapero 28</h2>
+        </div>
+
+        <div class="producto">
+            <img src="imagenes/trapero_grande.jpeg" alt="Trapero estándar">
+            <h2>Trapero Grande</h2>
+        </div>
+
+        <!-- <div class="producto">
+            <img src="imagenes/trapero_español_acople.jpeg" alt="Trapero Premium">
+            <h2>Trapero Premiukklklm</h2>
+        </div> -->
+        <!-- <div class="producto">
+            <img src="imagenes/trapero_28.jpeg" alt="Escoba clásica">
+            <h2>Escoba Clásica</h2>
+        </div> -->
+
+        <div class="producto">
+            <img src="imagenes/trapero_5500.jpeg" alt="Escoba Premium">
+            <h2>Trapero 5500</h2>
+        </div>
+
+        <div class="producto">
+            <img src="imagenes/porta_trapero.jpeg" alt="Trapero estándar">
+            <h2>Porta Trapero</h2>
+        </div>
+
+        <div class="producto">
+            <img src="imagenes/escobon_limpia_t.jpeg" alt="Trapero Premium">
+            <h2>Escobon limpia techo</h2>
+        </div>
+        <div class="producto">
+            <img src="imagenes/bolsa_g.jpeg" alt="Escoba clásica">
+            <h2>Bolsa Grande</h2>
+        </div>
+
+        <div class="producto">
+            <img src="imagenes/bolsa_m.jpeg" alt="Escoba Premium">
+            <h2>Bolsa Mediana</h2>
+        </div>
+
+        <div class="producto">
+            <img src="imagenes/bolsa_e.jpeg" alt="Trapero estándar">
+            <h2>Bolsa Extragrande</h2>
         </div>
 <!-- 
         <div class="producto">
-            <img src="escoba2.jpg" alt="Escoba Premium">
-            <h2>Escoba Premium</h2>
-        </div>
-
-        <div class="producto">
-            <img src="trapero1.jpg" alt="Trapero estándar">
-            <h2>Trapero Estándar</h2>
-        </div>
-
-        <div class="producto">
             <img src="trapero2.jpg" alt="Trapero Premium">
             <h2>Trapero Premium</h2>
         </div>
@@ -237,49 +275,11 @@
         <div class="producto">
             <img src="trapero2.jpg" alt="Trapero Premium">
             <h2>Trapero Premium</h2>
-        </div>
-        <div class="producto">
-            <img src="escoba1.jpg" alt="Escoba clásica">
-            <h2>Escoba Clásica</h2>
-        </div>
-
-        <div class="producto">
-            <img src="escoba2.jpg" alt="Escoba Premium">
-            <h2>Escoba Premium</h2>
-        </div>
-
-        <div class="producto">
-            <img src="trapero1.jpg" alt="Trapero estándar">
-            <h2>Trapero Estándar</h2>
-        </div>
-
-        <div class="producto">
-            <img src="trapero2.jpg" alt="Trapero Premium">
-            <h2>Trapero Premium</h2>
-        </div>
-        <div class="producto">
-            <img src="escoba1.jpg" alt="Escoba clásica">
-            <h2>Escoba Clásica</h2>
-        </div>
-
-        <div class="producto">
-            <img src="escoba2.jpg" alt="Escoba Premium">
-            <h2>Escoba Premium</h2>
-        </div>
-
-        <div class="producto">
-            <img src="trapero1.jpg" alt="Trapero estándar">
-            <h2>Trapero Estándar</h2>
-        </div>
-
-        <div class="producto">
-            <img src="trapero2.jpg" alt="Trapero Premium">
-            <h2>Trapero Premium</h2>
-        </div> -->
+        </div>  -->
     </section>
 
     <footer>
-        <p>&copy; 2024 Venta de Escobas y Traperos. Todos los derechos reservados.</p>
+        <p>&copy; As. servicio de calidad al mejor precio </p>
     </footer>
 </body>
 </html>
