--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Escobas y Traperos</title>
+    <link rel="icon" type="image/png" sizes="16x16"  href="favicon-16x16.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -126,50 +129,50 @@
         </div>
         <div class="producto">
             <img src="imagenes/trapero_1000.jpeg" alt="Escoba clásica">
-            <h2>Trapero 1000</h2>
+            <h2>Trapero de aglodon con acople</h2>
         </div>
 
         <div class="producto">
             <img src="imagenes/trapero_hilo500.jpeg" alt="Escoba Premium">
-            <h2>trapero hilo 500</h2>
+            <h2>trapero de algodon bicolor 500</h2>
         </div>
 
         <div class="producto">
             <img src="imagenes/trapero_cebra1000.jpeg" alt="Trapero estándar">
-            <h2>Trapero Cebra 1000</h2>
+            <h2>Trapero de algodon bicolor 1000</h2>
         </div>
 
         <div class="producto">
             <img src="imagenes/trapero_cebra.jpeg" alt="Trapero Premium">
-            <h2>Trapero Cebra</h2>
+            <h2>Trapero de algodon bicolor grande</h2>
         </div>
         <div class="producto">
             <img src="imagenes/trapero_pitorro.jpeg" alt="Escoba clásica">
-            <h2>Trapero con acople</h2>
+            <h2>Trapero de algodon con acople</h2>
         </div>
 
       <div class="producto"> 
             <img src="imagenes/trapero_28.jpeg" alt="Escoba Premium">
-            <h2>Trapero 28</h2>
+            <h2>Trapero algodon 28</h2>
         </div>
 
         <div class="producto">
             <img src="imagenes/trapero_grande.jpeg" alt="Trapero estándar">
-            <h2>Trapero Grande</h2>
+            <h2>Trapero de hilo Grande</h2>
         </div>
 
         <!-- <div class="producto">
             <img src="imagenes/trapero_español_acople.jpeg" alt="Trapero Premium">
             <h2>Trapero Premiukklklm</h2>
         </div> -->
-        <!-- <div class="producto">
-            <img src="imagenes/trapero_28.jpeg" alt="Escoba clásica">
-            <h2>Escoba Clásica</h2>
-        </div> -->
+        <div class="producto">
+            <img src="imagenes/trapero_palo.jpeg" alt="Escoba clásica">
+            <h2>Trapero de algodon con palo 1000</h2>
+        </div>
 
         <div class="producto">
             <img src="imagenes/trapero_5500.jpeg" alt="Escoba Premium">
-            <h2>Trapero 5500</h2>
+            <h2>Trapero fibra española</h2>
         </div>
 
         <div class="producto">
