--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="producto">
-            <img src="imagenes/escoba_as.jpeg" alt="Trapero estándar">
+            <img src="escoba_as.jpeg" alt="Trapero estándar">
             <h2>Escoba As</h2>
         </div>
 
